[workspace]
members = [
"nats_sub",
"blocks-nats-to-sql",
  "database-maintenance",
  "dpplns",
  "earnings-to-balances",
  "event-scheduler",
  "nats_sub",
  "nats_publish",
  "nats_template",
  "shared", 
  "shares-to-pg",
  "stratum-nats-to-sql",
  "share-processor"
]

exclude = [
   "grinlogwatch",
   "rants_test",

]
