[package]
name = "api_test"
version = "0.1.0"
authors = ["moofone moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.0"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
shared = { path = "../shared"}

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]