[package]
name = "database-maintenance"
version = "0.1.0"
authors = ["moofone moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}
serde_json = "1.0.51"
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
rmp-serde = "0.14.3"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "postgres"] }


