[package]
name = "dpplns"
version = "0.1.0"
authors = ["moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dpplns"
path = "src/dpplns.rs"

[dependencies]
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
natsio = "0.3.2"
sentry = "0.18.0"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "postgres"] }

shared = { path = "../shared"}