[package]
name = "dpplns"
version = "0.1.0"
authors = ["moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dpplns"
path = "src/dpplns.rs"

[dependencies]
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }
#serde_json = "1.0.51"
nats = "0.7.0"
dotenv = "0.15.0"
sentry = "0.18.1"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "postgres"] }
rmp-serde = "0.14.3"
shared = { path = "../shared"}
hashbrown ="0.8.0"