[package]
name = "earnings-to-balances"
version = "0.1.0"
authors = ["moofone moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "earnings-to-balances"
path = "src/earnings_to_balances.rs"

[dependencies]
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
sentry = "0.18.1"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "postgres"] }
shared = { path = "../shared"}