[package]
name = "event_scheduler"
version = "0.1.0"
authors = ["moofone moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
nats = "0.6.0"
sentry = "0.18.1"
rmp-serde = "0.14.3"
shared = { path = "../shared"}