[package]
name = "epicwatch"
version = "0.1.0"
authors = ["moofone <moofone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
logwatcher = "0.1.1"
chrono = "0.4"
sentry = "*"
tokio = { version = "0.2.22", features = ["full"] }