[package]
name = "publish_test"
version = "0.1.0"
authors = ["moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "publish"
path = "src/publish.rs"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
#serde = { version = "1.0.106", features = ["derive"] }
#serde_json = "1.0.51"
nats = "0.7.0"
shared = { path = "../shared"}
rand = "*"
futures = "0.3.1"
#rants = "0.4.3"
dotenv = "0.15.0"
#rmp = "0.8.9"
rmp-serde = "0.14.3"

