[package]
name = "shared"
version = "0.1.0"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
natsio = "0.3.2"
