[package]
name = "shares-to-pg"
version = "0.1.0"
authors = ["moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}
#serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
#natsio = "0.3.2"
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
