[package]
name = "stratum-nats-to-sql"
version = "0.1.0"
authors = ["moofone moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
#serde = { version = "1.0.106", features = ["derive"] }
#serde_json = "1.0.51"
nats = "0.6.0"
sentry = "0.18.1"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "postgres"] }
rmp-serde = "0.14.3"
shared = { path = "../shared"}