[package]
name = "stratum-nats-to-sql"
version = "0.1.0"
authors = ["moofone moofone <moophone22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stratum-nats-to-sql"
path = "src/stratum_nats_to_sql.rs"


[dependencies]
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
nats = "0.7.0"
sentry = "0.18.1"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "postgres"] }
rmp-serde = "0.14.3"
shared = { path = "../shared"}
dotenv = "0.15.0"
serde_json = "1.0"